--- a/public/404.html
+++ b/public/404.html
@@ -243,7 +243,7 @@
     </p>
 	</div>
 	<div class="buttons-container">
-		<a class="border-button" href="http://localhost:1313/">Go To Homepage</a>
+		<a class="border-button" href="https://turbohustle.xyz/">Go To Homepage</a>
 		<a class="border-button" href="mailto:example">Report A Problem</a>
 	</div>
 </div>
