--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,8 @@
   
 
   <link rel="apple-touch-icon-precomposed" href='https://turbohustle.xyz/favicon/apple-touch-icon-precomposed.png'>
-  <link rel="icon" href='https://turbohustle.xyz/favicon/favicon.png'>
+  <link rel="icon" href='https://turbohustle.xyz/favicon/favicon.ico'>
+  <link rel="shortcut icon" href='https://turbohustle.xyz/favicon/favicon.png'>
   
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-TileImage" content='/favicon/mstile.png'>
@@ -293,9 +294,6 @@ ga('send', 'pageview');
 
 
 
-  
-  
-    
   
 
 
